feat: fix json stringify

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@types/axios": "^0.14.0",
+    "@types/safe-json-stringify": "^1.1.1",
     "axios": "^0.19.2",
-    "form-data": "^3.0.0"
+    "form-data": "^3.0.0",
+    "safe-json-stringify": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
